--- a/config.json
+++ b/config.json
@@ -76,6 +76,15 @@
     "ikun": {
       "api": "https://ikunzyapi.com/api.php/provide/vod",
       "name": "iKun资源"
+    },
+    "liangziziyuan": {
+            "api": "https://cj.lziapi.com/api.php/provide/vod/from/lzm3u8/at/xml",
+            "api": "https://cj.lziapi.com/api.php/provide/vod",
+            "name": "量子资源"
+    },
+        "yayaziyuan": {
+            "api": "https://cj.yayazy.net/api.php/provide/vod",
+            "name": "鸭鸭资源"
     }
   }
 }
