--- a/config.json
+++ b/config.json
@@ -82,9 +82,14 @@
             "api": "https://cj.lziapi.com/api.php/provide/vod",
             "name": "量子资源"
     },
-        "yayaziyuan": {
+    "yayaziyuan": {
             "api": "https://cj.yayazy.net/api.php/provide/vod",
             "name": "鸭鸭资源"
+    },
+    "ffzynew": {
+            "api": "https://api.ffzyapi.com/api.php/provide/vod",
+            "name": "非凡影视new",
+            "detail": "http://ffzy5.tv"
     }
   }
 }
