--- a/config.json
+++ b/config.json
@@ -90,6 +90,9 @@
       "api": "https://api.ffzyapi.com/api.php/provide/vod",
       "name": "非凡影视new",
       "detail": "http://ffzy5.tv"
-    }
+    },
+    "baiduzy":{
+      "name": "百度资源",
+      "api": "https://api.apibdzy.com/api.php/provide/vod"
   }
 }
